# graphics

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: base.frag  base.vert
shapes/: triangle.h
src/: Cube.cpp  Cube.h  MainMenuBar.cpp  RenderObject.cpp  RenderObject.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h  app.cpp  app.h  config.h  macros.h  main.cpp  mainmenubar.cpp  mainmenubar.h  primatives.h  primitives.h  sceneview.cpp  sceneview.h  shader.cpp  shader.h  squarewell.cpp  squarewell.h  window.cpp  window.h
src/context/: ImGuiContext.cpp  ImGuiContext.h  context.h
src/editor/: Editor.cpp  Editor.h  Tab.cpp  Tab.h  lexer.h
src/menus/: Settings.cpp  Settings.h
src/window/: window.cpp  window.h
